--- a/CloudServiceRecommender/pom.xml
+++ b/CloudServiceRecommender/pom.xml
@@ -127,8 +127,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <version>2.3</version>
+        <version>2.6</version>
         <configuration>
+          <webResources>
+            <resource>
+              <directory>${basedir}/src/main/setup</directory>
+              <targetPath>META-INF</targetPath>
+            </resource>
+          </webResources>
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
       </plugin>
