--- a/CloudServiceRecommender/src/main/resources/log4j.properties
+++ b/CloudServiceRecommender/src/main/resources/log4j.properties
@@ -1,4 +1,5 @@
-# Root logger option
+# Root logger option. Debug has a lower priority than INFO so DEBUG messages
+# including the ones from dependencies will be ignored.
 log4j.rootLogger=INFO, stdout
 
 # Direct log messages to stdout
@@ -7,6 +8,6 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%-5p %d{yyyy-MM-dd HH:mm:ss}  [%c{1}:%L] - %m%n
 
-#Change service recommander log levels
+# Change service recommander log levels. Only DEBUG leverl and other levels with higher
+# priority from this package will be printed out.
 log4j.logger.se.kth.servicerecommender=DEBUG
-log4j.logger.se.kth.servicerecommender=WARN
