--- a/CloudServiceRecommender/pom.xml
+++ b/CloudServiceRecommender/pom.xml
@@ -89,6 +89,16 @@
       <artifactId>slf4j-api</artifactId>
       <version>1.7.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>5.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.atmosphere</groupId>
+      <artifactId>atmosphere-runtime</artifactId>
+      <version>2.3.4</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -172,6 +182,12 @@
       </releases>
       <snapshots>
       </snapshots>
+    </repository>
+    <repository>
+      <id>prime-repo</id>
+      <name>PrimeFaces Maven Repository</name>
+      <url>http://repository.primefaces.org</url>
+      <layout>default</layout>
     </repository>
   </repositories>
 
