--- a/CloudServiceRecommender/pom.xml
+++ b/CloudServiceRecommender/pom.xml
@@ -99,6 +99,12 @@
       <artifactId>atmosphere-runtime</artifactId>
       <version>2.3.4</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.3.2</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
   <build>
