--- a/CloudServiceRecommender/src/main/webapp/WEB-INF/web.xml
+++ b/CloudServiceRecommender/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
     </session-config>
   -->
   <welcome-file-list>
-    <welcome-file>faces/SpotInstanceBatchJobManager.xhtml</welcome-file>
+    <welcome-file>faces/ControlPanel.xhtml</welcome-file>
   </welcome-file-list>
 
 </web-app>
