--- a/CloudServiceRecommender/src/main/resources/log4j.properties
+++ b/CloudServiceRecommender/src/main/resources/log4j.properties
@@ -10,4 +10,4 @@ log4j.appender.stdout.layout.ConversionPattern=%-5p %d{yyyy-MM-dd HH:mm:ss}  [%c
 
 # Change service recommander log levels. Only DEBUG leverl and other levels with higher
 # priority from this package will be printed out.
-log4j.logger.se.kth.servicerecommender=DEBUG
+log4j.logger.se.kth.kandy=DEBUG
