Modify rest API for calculating cluster time and price
Retrieve ec2 spot instance prices for all regions
Improve unit test for cluster cost

Signed-off-by:Hossein Molazem <mh.sina@gmail.com>
Signed-off-by:Hossein Molazem <mh.sina@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,5 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
-/ServiceRecommander/nbproject/private/
-/ServiceRecommander/ServiceRecommander-war/nbproject/private/
-/ServiceRecommander/ServiceRecommander-ejb/nbproject/private/
+CloudServiceRecommender/nbactions.xml
+
