--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 CloudServiceRecommender/nbactions.xml
+CloudServiceRecommender/nb-configuration.xml
 
